--- a/spring-ioc/dependency-injection/pom.xml
+++ b/spring-ioc/dependency-injection/pom.xml
@@ -9,6 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dependencies</artifactId>
+    <artifactId>dependency-injection</artifactId>
 
 </project>
