--- a/spring-ioc/pom.xml
+++ b/spring-ioc/pom.xml
@@ -12,10 +12,13 @@
     <artifactId>spring-ioc</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>dependencies</module>
-    </modules>
     <name>spring-ioc</name>
+
+    <modules>
+        <module>dependency-injection</module>
+        <module>dependency-source</module>
+        <module>dependency-lookup</module>
+    </modules>
 
     <dependencies>
 
