--- a/spring-ioc/pom.xml
+++ b/spring-ioc/pom.xml
@@ -18,6 +18,8 @@
         <module>dependency-injection</module>
         <module>dependency-source</module>
         <module>dependency-lookup</module>
+        <module>bean-scope</module>
+        <module>bean-lifecycle</module>
     </modules>
 
     <dependencies>
